# itsme

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-push
.github/workflows/: ci.yml  claude-code-review.yml
config/: default.toml
docs/: ARCHITECTURE.md  ICONS.md  INSTALL.md  ROADMAP.md  SMOKE.md  TROUBLESHOOTING.md  config.example.toml
docs/assets/icons/: README.md
hooks/: hooks.json
hooks/cc/: before-compact.sh  before-exit.sh  context-pressure.sh
scripts/: lint-icons.py
skills/icons/: SKILL.md
skills/itsme/: SKILL.md
src/itsme/: __init__.py
src/itsme/core/: __init__.py  api.py  config.py  dedup.py  llm.py  search.py
src/itsme/hooks/: __init__.py  __main__.py  _common.py  context_pressure.py  lifecycle.py
src/itsme/mcp/: __init__.py  server.py
tests/: test_scaffold.py
tests/core/: test_api.py  test_ask_auto.py  test_config.py  test_dedup.py  test_e2e_intake.py  test_e2e_vault_pipeline.py  test_e2e_wiki_pipeline.py  test_intake.py  test_invalidation.py  test_llm.py  test_search.py  test_wiki_embedding.py
tests/core/adapters/: fake_mempalace_server.py  test_mempalace.py  test_mempalace_stdio.py  test_naming.py
tests/core/aleph/: test_index.py  (+3 more)
tests/hooks/: test_common.py  test_context_pressure.py  test_lifecycle.py  test_main.py
tests/mcp/: test_server.py  test_status_feed.py  test_tools.py
tests/smoke/: __init__.py  test_e2e_in_process.py  test_mempalace_stdio_roundtrip.py  test_subprocess.py
(+43 files in other folders)
