[project]
name = "itsme"
version = "0.0.1a0"
description = "Long-term memory plugin for agent IDEs (remember / ask / status)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "coxon" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "mcp>=1.27.0",
    "pydantic>=2.7",
    "python-ulid>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff==0.7.4",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itsme"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]
